--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(116, 158, 120);
+    font-family: Bai Jamjuree;
 }
 
 footer {
@@ -8,4 +9,10 @@ footer {
     bottom:0;
     position:fixed;
     width:100%;
+    height:2rem;
+}
+footer p{
+    text-align: center;
+    font-size: 0.6rem;
+    margin-top: 0,5rem;
 }
