--- a/style.css
+++ b/style.css
@@ -17,5 +17,23 @@ footer p{
     margin-top: 0,5rem;
 }
 .cartao{
+    #container {
+    display:flex ;
+}
+.cartao {
+    margin: 1rem 1rem;
+}
+.cartao {
+    margin: 1rem 1rem;
+    background-color: rgb(51, 90, 90);
+    height: 20rem;
+}
+.cartao {
+    margin: 1rem 1rem;
+    background-color: rgb(21, 54, 54);
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% -6rem);
+}
     
 }
