--- a/style.css
+++ b/style.css
@@ -27,13 +27,21 @@ footer p{
     margin: 1rem 1rem;
     background-color: rgb(51, 90, 90);
     height: 20rem;
-}
-.cartao {
-    margin: 1rem 1rem;
-    background-color: rgb(21, 54, 54);
-    height: 20rem;
-    flex-grow: 1;
+    lex-grow: 1;
     flex-basis: calc(33% -6rem);
+}
+}
+.cartao__conteudo h3 {
+    background-color: rgb(86, 206, 246);
+    text-align: left;
+    padding: 0.5rem;
+    position: absolute;
+    margin: 0.6rem;
+    border-radius: 0.6rem;
+    font-size: 1vw;
+}
+}
+
 }
     
 }
